cluster/apps/nas/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nas
  labels:
    goldilocks.fairwinds.com/enabled: "true"
