cluster/apps/nas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas-ip
  namespace: nas
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: nas-ip
      port: 80
      protocol: TCP
      targetPort: 9443 # https port
